@@ -6,6 +6,7 @@ var:
       - /var/log/redis/redis-server.log*
     os.darwin:
       - /usr/local/var/log/redis/redis-server.log*
+      - /usr/local/var/db/redis/redis-server.log*
     os.windows:
       - "c:/program files/Redis/logs/redis.log*"
 
